
* Re-worked the Linux port.

* Introduced remote/ for distributed operation.

* Introduced qsim-fastforwarder and saved state.
 
* Introduced qsim-io to transfer files to the guest.

* Removed the benchmarks from the main source directory.

* Fixed a ton of minor issues and bugs.

0.1.1

* Running QSim no longer requires access to the QEMU source directory in order
  to open the (unused) PC BIOS image.

* The build process now downloads BusyBox by script (it is no longer included
  in the distribution).

* Callbacks setters now return handles, which can be used to un-set callbacks.

* Benchmarks can now be loaded from .tar images through qsim-io. The
  QSim::load_file() function in qsim-load.h provides this functionality.

* The benchmarks are no longer part of the main repository, and building kernel
  images is no longer a required part of the QSim build process.

0.1.2

* Fixed compiler specific crashes.

* Added script to make tarballs.

* Fixed bug in set_reg() for flags register.

0.1.3

* Re-packaged QSim client as a library, which is installed to $QSIM_PREFIX/lib
  by the remote/client/ makefile.

* Makefiles now (mostly) respect $QSIM_PREFIX

0.1.4

* Fixed bug in QSim client; now respects $QSIM_PREFIX.

* The QEMU library is now placed in $QSIM_PREFIX/lib and found relative to
  $QSIM_PREFIX/lib (if set) or /usr/local/lib by libqsim.so. This finally
  eliminates the need to have a symlink called libqemu.so in the working
  directory.

* Added simple zero-run compression to state file save/load functions. The
  result is a massive space savings in state files (with 3GB of guest RAM,
  files were 3GB, now they're ~28MB).

0.1.5

* Improved multithreaded support in QEMU. The global lock has been replaced
  with smaller-grained readers/writer locks interleaved on cache line
  boundaries. The locking infrastructure has been moved to a header file,
  qsim-lock.h, where it can be further tweaked independently of the QEMU
  modifications.